--- a/Slides.Rmd
+++ b/Slides.Rmd
@@ -48,18 +48,47 @@ Our package will be functional but not necessarily pretty.
 class: inverse, center, middle
 
 # Get Started
+### "In fact, anyone can and should write R packages!"<sup>1</sup>
 
+.footnote[
+[1] Quote from Jeff Leek and Shannon Ellis  
+]
 ---
 
 # What's a package anyway?
 
-Packages are units of reproducible R code. 
+Packages are organised units of reproducible R code. 
 
 A package includes:
-- R functions
-- Documentation describing how to use the functions
-- Data
+- R functions<sup>1</sup>: abstraction of details - user only needs to know what inputs and outputs are needed.
+- Documentation: describing how to use the functions.
+- Data.
 
+It's a friendly way to distribute your code, or even reuse it yourself! 
+
+.footnote[
+[1] We expose user-facing functions, so the user/future you does not need to be concerned with the supporting/helper functions.
+]
+<img style = "max-width: 90%; 
+              max-height = 90%; 
+              display:block; 
+              margin:auto" 
+              src="./sodapop.gif" 
+              width = 350px/>
+
+---
+# Ways to install a package
+
+1. Packages are mainly stored on [Comprehensive R Archive Network aka CRAN](https://cran.r-project.org/web/packages/available_packages_by_name.html) --> we install these using:
+          install.packages('ggplot2') # OR
+          Tools -> Install Packages ... menu item
+2. There are also many packages on GitHub --> we install these using a helper package `devtools`:
+          install.packages('devtools')
+          devtools::install_github("sciencificity/werpals")
+
+Then we load the package to make the functionality available using:
+
+        library(werpals)
 ---
 
 
@@ -74,14 +103,20 @@ A package includes:
 --
 
 - 
+---
+# Resources
 
+1. [Dev version: R packages book](https://r-pkgs.org/)
+1. [Complete original version: R packages book](http://r-pkgs.had.co.nz/)
+1. [Pre-flight check list](https://github.com/rdpeng/daprocedures/blob/master/lists/Rpackage_preflight.md)
+1. [Writing an R package from scratch](https://hilaryparker.com/2014/04/29/writing-an-r-package-from-scratch/)
 
 
 ---
 
-# Git - Some tips & Useful commands
+# Git - Some tips & Useful commands (Windows)
 
-## Using Git Bash
+## Using Git Bash or the Terminal window in RStudio
 - `pwd`: Tells you where you are currently, literally print working directory.
 <img src = "./git1.png" width = 300px>
 
