--- a/Slides.Rmd
+++ b/Slides.Rmd
@@ -61,14 +61,14 @@ class: inverse, center, middle
 Packages are organised units of reproducible R code. 
 
 A _package_ includes:
-- __R functions__<sup>1</sup>: abstraction of details - user only needs to know what inputs and outputs are needed.
-- __Documentation__: describing how to use the functions.
-- __Data__.
+- __`R functions`__<sup>1</sup>: abstraction of details - user only needs to know what inputs and outputs are needed.
+- __`Documentation`__: describing how to use the functions.
+- __`Data`__.
 
 It's a _friendly_ way to distribute your code, or even _reuse_ it yourself! 
 
 .footnote[
-[1] We expose __user-facing functions__, so the user/future you does not need to be concerned with the supporting/helper functions.
+[1] We expose __`user-facing functions`__, so the user/future you does not need to be concerned with the supporting/helper functions.
 ]
 <img style = "max-width: 90%; 
               max-height = 90%; 
@@ -105,9 +105,9 @@ Then we load the package to make the functionality available using:
 
 .pull-right[
 ### Formal Naming Requirements
-- must only consist of letters, numbers and periods i.e.  `.`; 
-- it must start with a letter; and
-- it cannot end with a period. 
+- Must only consist of letters, numbers and periods i.e.  `.`; 
+- Must start with a letter; and
+- Cannot end with a period. 
 
 You can’t use either hyphens or underscores in the package name. 
 ]
@@ -122,12 +122,12 @@ __Other Tips:__
 ---
 # Create a package
 
-- Check if the name you're thinking about `r emo::ji("thinking")` is available? Checks CRAN etc.
+- Check if the name you're thinking about `r emo::ji("thinking")` is available? 
 
 .pull-left[
 ```{r eval=FALSE, tidy=FALSE}
 install.packages("available")
-available::available("testthat")
+available::available("cluerumour")
 ```
 ]
 .pull-right[
@@ -142,12 +142,46 @@ available::available("testthat")
 ---
 # Structure of a package
 - DESCRIPTION : the metadata of the package (package name, version, author, maintainer, dependencies etc.)
-- NAMESPACE : how your package interacts with other packages and what you make available to the user
+- NAMESPACE : how your package interacts with other packages (what does the package import) and what you make available to the user (what does the package export).
 - R/ : code files
 - man/ : documentation files
 - data/ : data
-- tests/ : the tests
 - .Rbuildignore : a description of what will be ignored when the package is built
+
+---
+# New "Build" tab in the pane where  "History" and "Environment show
+<img style = "max-width: 100%; 
+              max-height = 100%; 
+              display:block; 
+              margin:auto" 
+              src="./build_tool.gif" 
+              width = 700px/>
+---
+# Whodunnit? Colonel Mustard in the Kitchen with the Trophy?
+### Let's start a Rumour
+
+<img style = "max-width: 90%; 
+              max-height = 90%; 
+              display:block; 
+              margin:auto" 
+              src="./clue.png" 
+              width = 350px/>
+
+- We can create an R script file and place it in the __`/R`__ folder, or we can use the `usethis` package. 
+
+  ```{r eval=FALSE, tidy=FALSE}
+      usethis::use_r("cluerumour")
+  ```
+- Fill in the body of the function(s)  
+---
+# Take it for a spin
+
+- Usually you would test your functions but loading it into the workspace or sourcing the file.
+- Tbh I did run my functions this way; I created the functions outside of the package and then loaded the code file I wanted included in my package at the Project creation step.
+- Even if you built your scripts outside of the project, you should test it here using the `devtools` package as follows:
+  ```{r eval=FALSE, tidy=FALSE}
+  devtools::load_all()
+  ```
 
 ---
 # Resources
